fixed contrast issues

--- a/search/static/search/css/footer.css
+++ b/search/static/search/css/footer.css
@@ -6,3 +6,11 @@
     width: 100%;
     background-color: #f5f5f5;
 }
+
+.text-muted {
+    color: #42484c !important;
+}
+
+a {
+    color: #004793;
+}
